--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -7,7 +7,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyPG6u9B2QZeKAsm4rvqveDU",
+      "authorship_tag": "ABX9TyPujORoh53HoaSPmDRIleuc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,22 @@
         "pip install --upgrade huggingface-hub transformers"
       ],
       "metadata": {
-        "id": "XSYPGJ7Qfcd4"
+        "id": "XSYPGJ7Qfcd4",
+        "outputId": "44819fd9-610f-4177-c22d-38f5870f8067",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed huggingface-hub-0.24.2 transformers-4.43.3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -66,7 +78,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0e36fa8-5461-4142-fd18-fd0bdff76afa"
+        "outputId": "e8ee1111-6dd9-444c-85e3-2ea344a69d40"
       },
       "execution_count": 3,
       "outputs": [
@@ -531,7 +543,7 @@
         "id": "oZMvzQPcRgE_",
         "outputId": "92aa9f1e-7460-4659-abb0-bccf696ed16a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +782,7 @@
         "\n",
         "# Initialize Model\n",
         "def initialize_model():\n",
-        "    model_id = \"unsloth/llama-3-8b-Instruct-bnb-4bit\"\n",
+        "    model_id = \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\"\n",
         "\n",
         "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
         "    model = AutoModelForCausalLM.from_pretrained(\n",
@@ -815,6 +827,7 @@
         "        do_sample=True,\n",
         "        temperature=0.70,\n",
         "        top_p=0.90,\n",
+        "        repetition_penalty=1.2,\n",
         "    )\n",
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
@@ -847,6 +860,7 @@
         "        do_sample=True,\n",
         "        temperature=0.85,\n",
         "        top_p=0.90,\n",
+        "        repetition_penalty=1.2,\n",
         "    )\n",
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
@@ -999,9 +1013,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t2GxVq5KaBrM",
-        "outputId": "af5eff6a-dcbb-4691-c1e7-e51068b9c118"
+        "outputId": "1ee498bf-9338-414a-c0af-7a3a58320b1c"
       },
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1020,10 +1034,34 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "DoGja75Obiax"
+        "id": "DoGja75Obiax",
+        "outputId": "c63adc86-ce25-4ec8-bfb8-9544a29bc09d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\n",
+            "up to date, audited 23 packages in 468ms\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "2 \u001b[33m\u001b[1mmoderate\u001b[22m\u001b[39m severity vulnerabilities\n",
+            "\n",
+            "To address all issues (including breaking changes), run:\n",
+            "  npm audit fix --force\n",
+            "\n",
+            "Run `npm audit` for details.\n",
+            "your url is: https://petite-towns-tease.loca.lt\n"
+          ]
+        }
+      ]
     }
   ]
 }
