--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -7,7 +7,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyNxuZAe3xr3VsB7G6Iik0d7",
+      "authorship_tag": "ABX9TyOaObitBdOqhYRjlWBY2Bir",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,10 +62,25 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "bkfRKUbXRccW"
+        "id": "bkfRKUbXRccW",
+        "outputId": "eeccedbb-7cc7-41ee-e305-dc951243a262",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -99,6 +114,7 @@
         "from langchain.schema import SystemMessage, HumanMessage\n",
         "from langchain_core.prompts import PromptTemplate\n",
         "from langchain.retrievers import EnsembleRetriever\n",
+        "from transformers import AutoTokenizer, AutoModel\n",
         "\n",
         "\n",
         "templates = {\n",
@@ -518,10 +534,22 @@
         "\n"
       ],
       "metadata": {
-        "id": "t2GxVq5KaBrM"
+        "id": "t2GxVq5KaBrM",
+        "outputId": "2ae43285-486a-4e1f-d6e5-a6c0a7ef91b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting app_v11.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -579,6 +607,7 @@
         "from langchain.schema import SystemMessage, HumanMessage\n",
         "from langchain_core.prompts import PromptTemplate\n",
         "from langchain.retrievers import EnsembleRetriever\n",
+        "from transformers import AutoTokenizer, AutoModel\n",
         "\n",
         "\n",
         "templates = {\n",
@@ -631,8 +660,8 @@
         "        colbert_model: Model nesnesi\n",
         "    \"\"\"\n",
         "    # ColBERTv2 tokenizer ve modelini yükleme\n",
-        "    colbert_tokenizer = AutoTokenizer.from_pretrained(\"microsoft/ColBERT-v2\")\n",
-        "    colbert_model = AutoModel.from_pretrained(\"microsoft/ColBERT-v2\")\n",
+        "    colbert_tokenizer = AutoTokenizer.from_pretrained(\"colbert-ir/colbertv2.0\")\n",
+        "    colbert_model = AutoModel.from_pretrained(\"colbert-ir/colbertv2.0\")\n",
         "\n",
         "    return colbert_tokenizer, colbert_model\n",
         "\n",
@@ -1043,10 +1072,59 @@
         "\n"
       ],
       "metadata": {
-        "id": "PFEX5aO6N-ZR"
+        "id": "PFEX5aO6N-ZR",
+        "outputId": "24b4744c-8082-4e07-b78d-bcd8df739dd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting app_v11.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!npm install localtunnel\n",
+        "!streamlit run /content/app_v11.py &>/content/logs.txt &\n",
+        "!npx localtunnel --port 8501"
+      ],
+      "metadata": {
+        "id": "NSvm_Sc53OV7",
+        "outputId": "5ad1a18d-bf9f-4dab-e52e-30b545c86c48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\n",
+            "up to date, audited 23 packages in 446ms\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "2 \u001b[33m\u001b[1mmoderate\u001b[22m\u001b[39m severity vulnerabilities\n",
+            "\n",
+            "To address all issues (including breaking changes), run:\n",
+            "  npm audit fix --force\n",
+            "\n",
+            "Run `npm audit` for details.\n",
+            "your url is: https://lazy-peas-push.loca.lt\n"
+          ]
+        }
+      ]
     }
   ]
 }
