--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/LlgeUjcF2/H6fNyc/j87",
+      "authorship_tag": "ABX9TyNkPQrOqWkLNhw1p0S8yiBB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,10 +32,54 @@
         "!pip install openai"
       ],
       "metadata": {
-        "id": "sS1jLlO24N21"
+        "id": "sS1jLlO24N21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a8d7f117-55c3-4f70-d8a6-9cc57714166d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting openai\n",
+            "  Downloading openai-1.51.2-py3-none-any.whl.metadata (24 kB)\n",
+            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
+            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
+            "Collecting httpx<1,>=0.23.0 (from openai)\n",
+            "  Downloading httpx-0.27.2-py3-none-any.whl.metadata (7.1 kB)\n",
+            "Collecting jiter<1,>=0.4.0 (from openai)\n",
+            "  Downloading jiter-0.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.2 kB)\n",
+            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
+            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.5)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
+            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
+            "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
+            "  Downloading httpcore-1.0.6-py3-none-any.whl.metadata (21 kB)\n",
+            "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
+            "  Downloading h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n",
+            "Downloading openai-1.51.2-py3-none-any.whl (383 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m383.7/383.7 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading httpx-0.27.2-py3-none-any.whl (76 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.4/76.4 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading httpcore-1.0.6-py3-none-any.whl (78 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.0/78.0 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading jiter-0.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (325 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.2/325.2 kB\u001b[0m \u001b[31m14.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: jiter, h11, httpcore, httpx, openai\n",
+            "Successfully installed h11-0.14.0 httpcore-1.0.6 httpx-0.27.2 jiter-0.6.1 openai-1.51.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -111,7 +155,30 @@
         "    \"Sistem analizi ve tasarımı\",\n",
         "    \"Kalite kontrol ve güvenilirlik\",\n",
         "    \"Tedarik zinciri yönetimi\",\n",
-        "    \"Karar verme modelleri\","
+        "    \"Karar verme modelleri\",\n",
+        "    \"Simülasyon\",\n",
+        "    \"Havacılık ve uzay mühendisliği\",\n",
+        "    \"Aerodinamik\",\n",
+        "    \"İtki sistemleri\",\n",
+        "    \"Uçak yapıları\",\n",
+        "    \"Navigasyon ve kontrol\",\n",
+        "    \"Uydu teknolojileri\",\n",
+        "    \"Hava trafik kontrolü\",\n",
+        "    \"Malzeme karakterizasyonu\",\n",
+        "    \"Metalurji\",\n",
+        "    \"Polimerler ve kompozit malzemeler\",\n",
+        "    \"Seramik malzemeler\",\n",
+        "    \"Akıllı malzemeler\",\n",
+        "    \"Yüzey mühendisliği\",\n",
+        "    \"Korozyon ve korunma\",\n",
+        "    \"Elektronik malzemeler\",\n",
+        "    \"Su ve atık su arıtma\",\n",
+        "    \"Katı atık yönetimi\",\n",
+        "    \"Çevresel etki değerlendirmesi\",\n",
+        "    \"Yenilenebilir enerji\",\n",
+        "    \"Sürdürülebilir kalkınma\",\n",
+        "    \"Hidroloji\",\n",
+        "    \"Yeşil bina tasarımı\","
       ],
       "metadata": {
         "id": "a1E2mvoTLA_Z"
@@ -137,29 +204,6 @@
         "\n",
         "konular = [\n",
         "\n",
-        "    \"Simülasyon\",\n",
-        "    \"Havacılık ve uzay mühendisliği\",\n",
-        "    \"Aerodinamik\",\n",
-        "    \"İtki sistemleri\",\n",
-        "    \"Uçak yapıları\",\n",
-        "    \"Navigasyon ve kontrol\",\n",
-        "    \"Uydu teknolojileri\",\n",
-        "    \"Hava trafik kontrolü\",\n",
-        "    \"Malzeme karakterizasyonu\",\n",
-        "    \"Metalurji\",\n",
-        "    \"Polimerler ve kompozit malzemeler\",\n",
-        "    \"Seramik malzemeler\",\n",
-        "    \"Akıllı malzemeler\",\n",
-        "    \"Yüzey mühendisliği\",\n",
-        "    \"Korozyon ve korunma\",\n",
-        "    \"Elektronik malzemeler\",\n",
-        "    \"Su ve atık su arıtma\",\n",
-        "    \"Katı atık yönetimi\",\n",
-        "    \"Çevresel etki değerlendirmesi\",\n",
-        "    \"Yenilenebilir enerji\",\n",
-        "    \"Sürdürülebilir kalkınma\",\n",
-        "    \"Hidroloji\",\n",
-        "    \"Yeşil bina tasarımı\",\n",
         "    \"Rezervuar mühendisliği\",\n",
         "    \"Sondaj teknolojileri\",\n",
         "    \"Üretim mühendisliği\",\n",
