--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkPQrOqWkLNhw1p0S8yiBB",
+      "authorship_tag": "ABX9TyNjNGQYL7280C5PEhYcrvfp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a8d7f117-55c3-4f70-d8a6-9cc57714166d"
+        "outputId": "39759ccd-9ac1-4269-9d49-712af539d0e2"
       },
       "execution_count": 1,
       "outputs": [
@@ -66,15 +66,15 @@
             "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
             "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n",
             "Downloading openai-1.51.2-py3-none-any.whl (383 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m383.7/383.7 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m383.7/383.7 kB\u001b[0m \u001b[31m12.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading httpx-0.27.2-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.4/76.4 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.4/76.4 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading httpcore-1.0.6-py3-none-any.whl (78 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.0/78.0 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.0/78.0 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading jiter-0.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (325 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.2/325.2 kB\u001b[0m \u001b[31m14.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.2/325.2 kB\u001b[0m \u001b[31m20.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: jiter, h11, httpcore, httpx, openai\n",
             "Successfully installed h11-0.14.0 httpcore-1.0.6 httpx-0.27.2 jiter-0.6.1 openai-1.51.2\n"
           ]
@@ -178,7 +178,22 @@
         "    \"Yenilenebilir enerji\",\n",
         "    \"Sürdürülebilir kalkınma\",\n",
         "    \"Hidroloji\",\n",
-        "    \"Yeşil bina tasarımı\","
+        "    \"Yeşil bina tasarımı\",\n",
+        "    \"Sondaj teknolojileri\",\n",
+        "    \"Üretim mühendisliği\",\n",
+        "    \"Petrol rafinajı\",\n",
+        "    \"Doğalgaz işleme\",\n",
+        "    \"Petrol jeolojisi\",\n",
+        "    \"Biyomedikal mühendisliği\",\n",
+        "    \"Tıbbi görüntüleme\",\n",
+        "    \"Rehabilitasyon mühendisliği\",\n",
+        "     \"Biyosensörler\",\n",
+        "    \"Doku mühendisliği\",\n",
+        "    \"Nöro mühendislik\",\n",
+        "    \"Klinik mühendislik\",\n",
+        "    \"Yazılım test ve doğrulama\",\n",
+        "    \"Agile ve Scrum metodolojileri\",\n",
+        "    \"Nesne yönelimli programlama\","
       ],
       "metadata": {
         "id": "a1E2mvoTLA_Z"
@@ -203,26 +218,6 @@
         ")\n",
         "\n",
         "konular = [\n",
-        "\n",
-        "    \"Rezervuar mühendisliği\",\n",
-        "    \"Sondaj teknolojileri\",\n",
-        "    \"Üretim mühendisliği\",\n",
-        "    \"Petrol rafinajı\",\n",
-        "    \"Doğalgaz işleme\",\n",
-        "    \"Kuyubaşı ekipmanları\",\n",
-        "    \"Petrol jeolojisi\",\n",
-        "    \"Kuyu tamamlama\",\n",
-        "    \"Rezervuar simülasyonu\",\n",
-        "    \"Biyomedikal mühendisliği\",\n",
-        "    \"Tıbbi görüntüleme\",\n",
-        "    \"Rehabilitasyon mühendisliği\",\n",
-        "    \"Biyosensörler\",\n",
-        "    \"Doku mühendisliği\",\n",
-        "    \"Nöro mühendislik\",\n",
-        "    \"Klinik mühendislik\",\n",
-        "    \"Yazılım test ve doğrulama\",\n",
-        "    \"Agile ve Scrum metodolojileri\",\n",
-        "    \"Nesne yönelimli programlama\",\n",
         "    \"Yazılım güvenliği\",\n",
         "    \"Mobil uygulama geliştirme\",\n",
         "    \"Web teknolojileri\",\n",
@@ -268,7 +263,6 @@
         "    \"Deniz navigasyonu\",\n",
         "    \"Gıda işleme teknolojileri\",\n",
         "    \"Gıda paketleme\",\n",
-        "    \"Beslenme bilimi\",\n",
         "    \"Fermentasyon teknolojisi\",\n",
         "    \"Gıda kimyası\",\n",
         "    \"Gıda mikrobiyolojisi\",\n",
@@ -571,10 +565,27 @@
         "print(\"Veri seti oluşturuldu.\")\n"
       ],
       "metadata": {
-        "id": "bF4loLrv7Nw7"
+        "id": "bF4loLrv7Nw7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "c1d57790-c743-45b5-e012-3fc8c21b1673"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-12d7ac9bdad7>\u001b[0m in \u001b[0;36m<cell line: 346>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    362\u001b[0m             \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mremove_spaces_between_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    363\u001b[0m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'instruction'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minstruction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'input'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'output'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 364\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# API hız sınırlarını aşmamak için bekleme süresi ekleyin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    365\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    366\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Veri seti oluşturuldu.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     }
   ]
 }
