--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjNGQYL7280C5PEhYcrvfp",
+      "authorship_tag": "ABX9TyMZOZiOi3eZF+Iy0JOtCAIt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -584,6 +584,258 @@
             "\u001b[0;32m<ipython-input-2-12d7ac9bdad7>\u001b[0m in \u001b[0;36m<cell line: 346>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    362\u001b[0m             \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mremove_spaces_between_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    363\u001b[0m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'instruction'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minstruction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'input'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'output'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 364\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# API hız sınırlarını aşmamak için bekleme süresi ekleyin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    365\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    366\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Veri seti oluşturuldu.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soru_kaliplari = [\n",
+        "    \"{0} tasarımının temel adımları nelerdir?\",\n",
+        "    \"{0} uygulamalarında karşılaşılan etik sorunlar nelerdir?\",\n",
+        "    \"{0} alanında maliyet optimizasyonu nasıl yapılır?\",\n",
+        "    \"{0} ve {1} teknolojilerinin entegrasyonu hangi avantajları sağlar?\",\n",
+        "    \"{0} kullanarak nasıl bir proje planlaması yapılır?\",\n",
+        "    \"{0} süreçlerinde kalite güvencesi nasıl sağlanır?\",\n",
+        "    \"{0} geliştirme sürecinde hangi yazılım araçları kullanılır?\",\n",
+        "    \"{0} alanındaki en iyi uygulama örnekleri nelerdir?\",\n",
+        "    \"{0} ve {1} arasındaki etkileşimi nasıl optimize edebiliriz?\",\n",
+        "    \"{0} için uygun test yöntemleri nelerdir?\",\n",
+        "    \"{0} alanında sürdürülebilir uygulamalar nasıl geliştirilir?\",\n",
+        "    \"{0} verimliliğini artırmak için hangi stratejiler uygulanabilir?\",\n",
+        "    \"{0} ile {1} arasındaki sinerjiyi nasıl kullanabiliriz?\",\n",
+        "    \"{0} uygulamalarında riskleri nasıl azaltabiliriz?\",\n",
+        "    \"{0} projelerinde proje yönetim metodolojileri nasıl uygulanır?\",\n",
+        "    \"{0} için gereksinim analizi nasıl yapılır?\",\n",
+        "    \"{0} alanında inovasyonun önemi nedir?\",\n",
+        "    \"{0} teknolojisinin tarihsel gelişimi nasıldır?\",\n",
+        "    \"{0} alanında eğitim ve sertifikasyon imkanları nelerdir?\",\n",
+        "    \"{0} uygulamalarında güvenlik standartları nelerdir?\",\n",
+        "    \"{0} ve {1} sistemlerinin karşılaştırılması nasıldır?\",\n",
+        "    \"{0} alanında karar verme süreçleri nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde paydaş yönetimi nasıl yapılır?\",\n",
+        "    \"{0} için veri toplama ve analizi nasıl gerçekleştirilir?\",\n",
+        "    \"{0} alanında siber güvenlik tehditleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde otomasyonun rolü nedir?\",\n",
+        "    \"{0} sistemlerinde hata toleransı nasıl sağlanır?\",\n",
+        "    \"{0} uygulamalarında yapay zeka nasıl kullanılır?\",\n",
+        "    \"{0} için performans değerlendirme kriterleri nelerdir?\",\n",
+        "    \"{0} alanında uluslararası standartlar nelerdir?\",\n",
+        "    \"{0} uygulamalarında çevresel sürdürülebilirlik nasıl sağlanır?\",\n",
+        "    \"{0} projelerinde kaynak planlaması nasıl yapılır?\",\n",
+        "    \"{0} için en uygun mimari yaklaşımlar nelerdir?\",\n",
+        "    \"{0} alanında model tabanlı sistem mühendisliği nasıl uygulanır?\",\n",
+        "    \"{0} projelerinde değişiklik yönetimi nasıl yapılır?\",\n",
+        "    \"{0} ve {1} arasındaki veri entegrasyonu nasıl sağlanır?\",\n",
+        "    \"{0} için kalite yönetim sistemleri nasıl tasarlanır?\",\n",
+        "    \"{0} alanında kullanılan simülasyon araçları nelerdir?\",\n",
+        "    \"{0} uygulamalarında insan faktörlerinin önemi nedir?\",\n",
+        "    \"{0} ve {1} alanlarında ortak kullanılan teknolojiler nelerdir?\",\n",
+        "    \"{0} süreçlerinde geri bildirim mekanizmaları nasıl çalışır?\",\n",
+        "    \"{0} için gereksinimlerin izlenebilirliği nasıl sağlanır?\",\n",
+        "    \"{0} alanında proje başarısını etkileyen faktörler nelerdir?\",\n",
+        "    \"{0} sistemlerinin ölçeklenebilirliği nasıl artırılır?\",\n",
+        "    \"{0} projelerinde maliyet tahmini nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında kullanılan en iyi test yöntemleri nelerdir?\",\n",
+        "    \"{0} alanında iş sağlığı ve güvenliği nasıl sağlanır?\",\n",
+        "    \"{0} ve {1} teknolojilerinin gelecekteki trendleri nelerdir?\",\n",
+        "    \"{0} için kullanıcı eğitimi ve desteği nasıl verilir?\",\n",
+        "    \"{0} süreçlerinde dokümantasyonun önemi nedir?\",\n",
+        "    \"{0} uygulamalarında veri güvenliği nasıl sağlanır?\",\n",
+        "    \"{0} için risk değerlendirmesi nasıl yapılır?\",\n",
+        "    \"{0} projelerinde takım çalışmasının önemi nedir?\",\n",
+        "    \"{0} alanında inovasyon yönetimi nasıl yapılır?\",\n",
+        "    \"{0} sistemlerinde enerji verimliliği nasıl artırılır?\",\n",
+        "    \"{0} ve {1} entegrasyonu sırasında karşılaşılan zorluklar nelerdir?\",\n",
+        "    \"{0} uygulamalarında müşteri gereksinimleri nasıl belirlenir?\",\n",
+        "    \"{0} alanında etik kuralların önemi nedir?\",\n",
+        "    \"{0} süreçlerinde kullanılan modelleme dilleri nelerdir?\",\n",
+        "    \"{0} için en uygun test stratejileri nelerdir?\",\n",
+        "    \"{0} projelerinde başarı ölçütleri nelerdir?\",\n",
+        "    \"{0} alanında sürdürülebilirlik metrikleri nasıl belirlenir?\",\n",
+        "    \"{0} ve {1} arasındaki farklar nelerdir?\",\n",
+        "    \"{0} uygulamalarında kalite kontrol süreçleri nasıl işler?\",\n",
+        "    \"{0} alanında standartların rolü nedir?\",\n",
+        "    \"{0} için en iyi proje yönetim araçları nelerdir?\",\n",
+        "    \"{0} süreçlerinde değişiklik kontrolü nasıl yapılır?\",\n",
+        "    \"{0} projelerinde zaman yönetimi nasıl optimize edilir?\",\n",
+        "    \"{0} alanında kullanıcı deneyimi nasıl iyileştirilir?\",\n",
+        "    \"{0} uygulamalarında veri bütünlüğü nasıl sağlanır?\",\n",
+        "    \"{0} ve {1} alanlarında kullanılan ortak protokoller nelerdir?\",\n",
+        "    \"{0} sistemlerinde ölçeklendirme stratejileri nelerdir?\",\n",
+        "    \"{0} için gereksinimlerin önceliklendirilmesi nasıl yapılır?\",\n",
+        "    \"{0} alanında kullanılan en yeni teknolojiler nelerdir?\",\n",
+        "    \"{0} projelerinde paydaş katılımı nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde maliyet azaltma yöntemleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında güvenlik açıkları nasıl tespit edilir?\",\n",
+        "    \"{0} ve {1} entegrasyonu işletmelere ne gibi faydalar sağlar?\",\n",
+        "    \"{0} alanında inovasyonu engelleyen faktörler nelerdir?\",\n",
+        "    \"{0} projelerinde kalite ölçümü nasıl yapılır?\",\n",
+        "    \"{0} için veri görselleştirme teknikleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında çevik metodolojiler nasıl uygulanır?\",\n",
+        "    \"{0} alanında sürekli öğrenme ve gelişim nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde kullanılan en iyi raporlama araçları nelerdir?\",\n",
+        "    \"{0} ve {1} arasındaki sinerji nasıl artırılır?\",\n",
+        "    \"{0} projelerinde iletişim yönetimi nasıl yapılır?\",\n",
+        "    \"{0} için en uygun altyapı nasıl seçilir?\",\n",
+        "    \"{0} alanında kaynak yönetimi nasıl optimize edilir?\",\n",
+        "    \"{0} uygulamalarında performans sorunları nasıl giderilir?\",\n",
+        "    \"{0} sistemlerinde modüler tasarımın faydaları nelerdir?\",\n",
+        "    \"{0} ve {1} alanlarında standartlaşmanın önemi nedir?\",\n",
+        "    \"{0} süreçlerinde yapay zeka nasıl kullanılabilir?\",\n",
+        "    \"{0} projelerinde kalite güvencesi nasıl sağlanır?\",\n",
+        "    \"{0} uygulamalarında kullanıcı geri bildirimi nasıl toplanır?\",\n",
+        "    \"{0} alanında veri madenciliği teknikleri nasıl uygulanır?\",\n",
+        "    \"{0} için uygun prototipleme yöntemleri nelerdir?\",\n",
+        "    \"{0} ve {1} teknolojilerinin karşılaştırılması nasıldır?\",\n",
+        "    \"{0} süreçlerinde iyileştirme fırsatları nasıl belirlenir?\",\n",
+        "    \"{0} projelerinde risk iletişimi nasıl yönetilir?\",\n",
+        "    \"{0} uygulamalarında performans metrikleri nasıl izlenir?\",\n",
+        "    \"{0} alanında çalışan ekiplerin eğitimi nasıl yapılır?\",\n",
+        "    \"{0} ve {1} sistemlerinin entegrasyonu için hangi araçlar kullanılır?\",\n",
+        "    \"{0} süreçlerinde veri analitiğinin rolü nedir?\",\n",
+        "    \"{0} projelerinde beklenti yönetimi nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında otomasyonun avantajları nelerdir?\",\n",
+        "    \"{0} alanında çevresel riskler nasıl yönetilir?\",\n",
+        "    \"{0} için kullanılan en iyi uygulama çerçeveleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde iş akışları nasıl optimize edilir?\",\n",
+        "    \"{0} projelerinde değişiklik talepleri nasıl değerlendirilir?\",\n",
+        "    \"{0} ve {1} teknolojilerinin birleşimi hangi yenilikleri getirir?\",\n",
+        "    \"{0} uygulamalarında uyumluluk nasıl sağlanır?\",\n",
+        "    \"{0} alanında veri depolama çözümleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde hata yönetimi nasıl yapılır?\",\n",
+        "    \"{0} projelerinde karar verme süreçleri nasıl iyileştirilir?\",\n",
+        "    \"{0} uygulamalarında enerji tüketimi nasıl azaltılır?\",\n",
+        "    \"{0} ve {1} alanlarında işbirliği nasıl geliştirilir?\",\n",
+        "    \"{0} için en iyi uygulama standartları nelerdir?\",\n",
+        "    \"{0} süreçlerinde tedarik zinciri nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde öğrenilmiş dersler nasıl kaydedilir?\",\n",
+        "    \"{0} alanında müşteri memnuniyeti nasıl artırılır?\",\n",
+        "    \"{0} uygulamalarında mobil teknolojilerin rolü nedir?\",\n",
+        "    \"{0} için en uygun veritabanı çözümleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde esneklik nasıl sağlanır?\",\n",
+        "    \"{0} projelerinde kültürel farklılıklar nasıl yönetilir?\",\n",
+        "    \"{0} alanında veri gizliliği nasıl korunur?\",\n",
+        "    \"{0} uygulamalarında büyük veri nasıl işlenir?\",\n",
+        "    \"{0} ve {1} sistemlerinin güvenliği nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde standartlaştırma neden önemlidir?\",\n",
+        "    \"{0} projelerinde entelektüel mülkiyet hakları nasıl yönetilir?\",\n",
+        "    \"{0} alanında kullanılan bulut çözümleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında kullanıcı arayüzü tasarımı nasıl yapılır?\",\n",
+        "    \"{0} için en iyi eğitim kaynakları nelerdir?\",\n",
+        "    \"{0} süreçlerinde veri kalitesi nasıl iyileştirilir?\",\n",
+        "    \"{0} projelerinde bütçe yönetimi nasıl yapılır?\",\n",
+        "    \"{0} alanında robotik teknolojilerin kullanımı nasıldır?\",\n",
+        "    \"{0} uygulamalarında esnek çalışma modelleri nasıl uygulanır?\",\n",
+        "    \"{0} ve {1} teknolojilerinin iş süreçlerine etkisi nedir?\",\n",
+        "    \"{0} süreçlerinde müşteri ilişkileri nasıl yönetilir?\",\n",
+        "    \"{0} projelerinde teslimat süresi nasıl optimize edilir?\",\n",
+        "    \"{0} alanında etik karar verme nasıl desteklenir?\",\n",
+        "    \"{0} uygulamalarında iş sürekliliği nasıl sağlanır?\",\n",
+        "    \"{0} için en uygun programlama dilleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde verimlilik metrikleri nasıl ölçülür?\",\n",
+        "    \"{0} projelerinde paydaş beklentileri nasıl yönetilir?\",\n",
+        "    \"{0} alanında yapay zeka etiği nasıl ele alınır?\",\n",
+        "    \"{0} uygulamalarında kullanıcı katılımı nasıl artırılır?\",\n",
+        "    \"{0} ve {1} alanlarında veri standardizasyonu nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde sürdürülebilir uygulamalar nasıl teşvik edilir?\",\n",
+        "    \"{0} projelerinde iletişim kanalları nasıl etkin kullanılır?\",\n",
+        "    \"{0} için mevcut en iyi uygulama rehberleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında mobil cihaz güvenliği nasıl sağlanır?\",\n",
+        "    \"{0} alanında bilgi yönetimi nasıl yapılır?\",\n",
+        "    \"{0} süreçlerinde çevik yaklaşımlar nasıl uygulanır?\",\n",
+        "    \"{0} projelerinde entegrasyon stratejileri nelerdir?\",\n",
+        "    \"{0} uygulamalarında insan-makine etkileşimi nasıl optimize edilir?\",\n",
+        "    \"{0} ve {1} sistemlerinin birlikte çalışabilirliği nasıl sağlanır?\",\n",
+        "    \"{0} süreçlerinde sürekli iyileştirme kültürü nasıl oluşturulur?\",\n",
+        "    \"{0} projelerinde dış kaynak kullanımı nasıl yönetilir?\",\n",
+        "    \"{0} alanında veri analitiği yetkinlikleri nasıl geliştirilir?\",\n",
+        "    \"{0} uygulamalarında blockchain teknolojisi nasıl kullanılır?\",\n",
+        "    \"{0} için kullanılan en yaygın güvenlik protokolleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde veri entegrasyonu nasıl yapılır?\",\n",
+        "    \"{0} projelerinde ekip motivasyonu nasıl artırılır?\",\n",
+        "    \"{0} alanında sürdürülebilir enerji kullanımı nasıl teşvik edilir?\",\n",
+        "    \"{0} uygulamalarında yapay zeka etik sorunları nelerdir?\",\n",
+        "    \"{0} ve {1} teknolojilerinin ortak kullanım alanları nelerdir?\",\n",
+        "    \"{0} süreçlerinde iş akışı yönetimi nasıl iyileştirilir?\",\n",
+        "    \"{0} projelerinde başarısızlık nedenleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında çoklu dil desteği nasıl sağlanır?\",\n",
+        "    \"{0} alanında veri güvenliği tehditleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde karar destek sistemleri nasıl kullanılır?\",\n",
+        "    \"{0} projelerinde zaman planlaması nasıl yapılır?\",\n",
+        "    \"{0} için en iyi uygulama örnekleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında enerji tasarrufu nasıl sağlanır?\",\n",
+        "    \"{0} ve {1} alanlarında standartların uyumlaştırılması nasıl yapılır?\",\n",
+        "    \"{0} süreçlerinde risk önleme stratejileri nelerdir?\",\n",
+        "    \"{0} projelerinde iletişim engelleri nasıl aşılır?\",\n",
+        "    \"{0} alanında veri görselleştirme araçları nelerdir?\",\n",
+        "    \"{0} uygulamalarında kullanıcı deneyimi nasıl geliştirilir?\",\n",
+        "    \"{0} için kaynak yönetimi nasıl optimize edilir?\",\n",
+        "    \"{0} süreçlerinde süreç madenciliği nasıl uygulanır?\",\n",
+        "    \"{0} projelerinde inovasyon nasıl teşvik edilir?\",\n",
+        "    \"{0} ve {1} teknolojilerinin sinerjisi nasıl kullanılır?\",\n",
+        "    \"{0} uygulamalarında veri etiketi nasıl yapılır?\",\n",
+        "    \"{0} alanında teknoloji trendleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde kalite iyileştirme nasıl sağlanır?\",\n",
+        "    \"{0} projelerinde başarının anahtar faktörleri nelerdir?\",\n",
+        "    \"{0} uygulamalarında siber saldırılara karşı korunma yöntemleri nelerdir?\",\n",
+        "    \"{0} için en uygun iş modelleri nelerdir?\",\n",
+        "    \"{0} ve {1} sistemlerinin entegrasyonunda dikkat edilmesi gerekenler nelerdir?\",\n",
+        "    \"{0} süreçlerinde veri gizliliği nasıl korunur?\",\n",
+        "    \"{0} projelerinde ekip içi iletişim nasıl güçlendirilir?\",\n",
+        "    \"{0} alanında yapay zeka kullanımı nasıldır?\",\n",
+        "    \"{0} uygulamalarında sürdürülebilir malzemeler nasıl kullanılır?\",\n",
+        "    \"{0} için en iyi eğitim programları nelerdir?\",\n",
+        "    \"{0} süreçlerinde otomasyonun getirdiği zorluklar nelerdir?\",\n",
+        "    \"{0} projelerinde performans yönetimi nasıl yapılır?\",\n",
+        "    \"{0} ve {1} alanlarında kullanılan ortak standartlar nelerdir?\",\n",
+        "    \"{0} uygulamalarında veri sıkıştırma teknikleri nelerdir?\",\n",
+        "    \"{0} alanında inovasyon kültürü nasıl oluşturulur?\",\n",
+        "    \"{0} süreçlerinde kullanıcı ihtiyaçları nasıl belirlenir?\",\n",
+        "    \"{0} projelerinde proje kapsamı nasıl yönetilir?\",\n",
+        "    \"{0} uygulamalarında veri aktarımı nasıl güvenli hale getirilir?\",\n",
+        "    \"{0} için stratejik planlama nasıl yapılır?\",\n",
+        "    \"{0} ve {1} teknolojilerinin birleşimi hangi fırsatları sunar?\",\n",
+        "    \"{0} süreçlerinde denetim ve kontrol nasıl yapılır?\",\n",
+        "    \"{0} projelerinde müşteri memnuniyeti nasıl ölçülür?\",\n",
+        "    \"{0} alanında sürdürülebilirlik hedefleri nasıl belirlenir?\",\n",
+        "    \"{0} uygulamalarında yapay zeka etik sorunları nelerdir?\",\n",
+        "    \"{0} için en uygun güvenlik çözümleri nelerdir?\",\n",
+        "    \"{0} süreçlerinde veri standardizasyonu nasıl sağlanır?\",\n",
+        "    \"{0} projelerinde iş analizi nasıl yapılır?\",\n",
+        "    \"{0} uygulamalarında çevresel etkiler nasıl azaltılır?\",\n",
+        "    \"{0} ve {1} sistemlerinin entegrasyonunda hangi protokoller kullanılır?\",\n",
+        "]\n"
+      ],
+      "metadata": {
+        "id": "THMvsvW5il5-"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(soru_kaliplari)"
+      ],
+      "metadata": {
+        "id": "OQAL6Mh2im3v",
+        "outputId": "bf01f1cd-2da6-49f8-c3de-dadceb55ebdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "214"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     }
