--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZOZiOi3eZF+Iy0JOtCAIt",
+      "authorship_tag": "ABX9TyOMG0lCMbw4pleSNUBsn0WE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,22 +36,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39759ccd-9ac1-4269-9d49-712af539d0e2"
+        "outputId": "f1967c12-59df-47f8-f9bb-d7c9587b9860"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting openai\n",
-            "  Downloading openai-1.51.2-py3-none-any.whl.metadata (24 kB)\n",
+            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.51.2)\n",
             "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
             "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
-            "Collecting httpx<1,>=0.23.0 (from openai)\n",
-            "  Downloading httpx-0.27.2-py3-none-any.whl.metadata (7.1 kB)\n",
-            "Collecting jiter<1,>=0.4.0 (from openai)\n",
-            "  Downloading jiter-0.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.2 kB)\n",
+            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.27.2)\n",
+            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.6.1)\n",
             "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
             "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
             "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.5)\n",
@@ -59,24 +56,10 @@
             "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
-            "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
-            "  Downloading httpcore-1.0.6-py3-none-any.whl.metadata (21 kB)\n",
-            "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
-            "  Downloading h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.6)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
             "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n",
-            "Downloading openai-1.51.2-py3-none-any.whl (383 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m383.7/383.7 kB\u001b[0m \u001b[31m12.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading httpx-0.27.2-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.4/76.4 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading httpcore-1.0.6-py3-none-any.whl (78 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.0/78.0 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading jiter-0.6.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (325 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.2/325.2 kB\u001b[0m \u001b[31m20.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: jiter, h11, httpcore, httpx, openai\n",
-            "Successfully installed h11-0.14.0 httpcore-1.0.6 httpx-0.27.2 jiter-0.6.1 openai-1.51.2\n"
+            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n"
           ]
         }
       ]
@@ -193,7 +176,47 @@
         "    \"Klinik mühendislik\",\n",
         "    \"Yazılım test ve doğrulama\",\n",
         "    \"Agile ve Scrum metodolojileri\",\n",
-        "    \"Nesne yönelimli programlama\","
+        "    \"Nesne yönelimli programlama\",\n",
+        "    \"Yazılım güvenliği\",\n",
+        "    \"Mobil uygulama geliştirme\",\n",
+        "    \"Web teknolojileri\",\n",
+        "    \"Süreç iyileştirme\",\n",
+        "    \"Nükleer enerji\",\n",
+        "    \"Enerji politikaları\",\n",
+        "    \"Termal enerji sistemleri\",\n",
+        "    \"Hidrojen teknolojileri\",\n",
+        "    \"Enerji ekonomisi\",\n",
+        "    \"Karbon yakalama ve depolama\",\n",
+        "    \"Otomotiv mühendisliği\",\n",
+        "    \"Motor teknolojileri\",\n",
+        "    \"Araç dinamiği\",\n",
+        "    \"Otomotiv elektroniği\",\n",
+        "    \"Güvenlik sistemleri\",\n",
+        "    \"Şasi ve süspansiyon tasarımı\",\n",
+        "    \"Emisyon kontrolü\",\n",
+        "      \"Yakıt hücreleri\",\n",
+        "    \"Araç aerodinamiği\",\n",
+        "    \"Mekatronik\",\n",
+        "    \"Sensör ve aktüatörler\",\n",
+        "    \"Endüstriyel otomasyon\",\n",
+        "    \"Akıllı sistemler\",\n",
+        "    \"İnsan-robot etkileşimi\",\n",
+        "    \"Mineraloji\",\n",
+        "    \"Sismik analiz\",\n",
+        "    \"Hidrojeoloji\",\n",
+        "    \"Maden yatakları\",\n",
+        "    \"Paleontoloji\",\n",
+        "    \"Jeotermal enerji\",\n",
+        "    \"Çevresel jeoloji\",\n",
+        "    \"Yapısal jeoloji\",\n",
+        "    \"Deniz mühendisliği\",\n",
+        "    \"Gemi tasarımı\",\n",
+        "    \"Deniz yapıları\",\n",
+        "    \"Deniz araçları hidrodinamiği\",\n",
+        "    \"Denizaltı teknolojileri\",\n",
+        "    \"Okyanus mühendisliği\",\n",
+        "    \"Deniz kirliliği kontrolü\",\n",
+        "    \"Liman ve kıyı mühendisliği\","
       ],
       "metadata": {
         "id": "a1E2mvoTLA_Z"
@@ -218,46 +241,7 @@
         ")\n",
         "\n",
         "konular = [\n",
-        "    \"Yazılım güvenliği\",\n",
-        "    \"Mobil uygulama geliştirme\",\n",
-        "    \"Web teknolojileri\",\n",
-        "    \"Süreç iyileştirme\",\n",
-        "    \"Nükleer enerji\",\n",
-        "    \"Enerji politikaları\",\n",
-        "    \"Termal enerji sistemleri\",\n",
-        "    \"Hidrojen teknolojileri\",\n",
-        "    \"Enerji ekonomisi\",\n",
-        "    \"Karbon yakalama ve depolama\",\n",
-        "    \"Otomotiv mühendisliği\",\n",
-        "    \"Motor teknolojileri\",\n",
-        "    \"Araç dinamiği\",\n",
-        "    \"Otomotiv elektroniği\",\n",
-        "    \"Güvenlik sistemleri\",\n",
-        "    \"Şasi ve süspansiyon tasarımı\",\n",
-        "    \"Emisyon kontrolü\",\n",
-        "    \"Yakıt hücreleri\",\n",
-        "    \"Araç aerodinamiği\",\n",
-        "    \"Mekatronik\",\n",
-        "    \"Sensör ve aktüatörler\",\n",
-        "    \"Endüstriyel otomasyon\",\n",
-        "    \"Akıllı sistemler\",\n",
-        "    \"İnsan-robot etkileşimi\",\n",
-        "    \"Mineraloji\",\n",
-        "    \"Sismik analiz\",\n",
-        "    \"Hidrojeoloji\",\n",
-        "    \"Maden yatakları\",\n",
-        "    \"Paleontoloji\",\n",
-        "    \"Jeotermal enerji\",\n",
-        "    \"Çevresel jeoloji\",\n",
-        "    \"Yapısal jeoloji\",\n",
-        "    \"Deniz mühendisliği\",\n",
-        "    \"Gemi tasarımı\",\n",
-        "    \"Deniz yapıları\",\n",
-        "    \"Deniz araçları hidrodinamiği\",\n",
-        "    \"Denizaltı teknolojileri\",\n",
-        "    \"Okyanus mühendisliği\",\n",
-        "    \"Deniz kirliliği kontrolü\",\n",
-        "    \"Liman ve kıyı mühendisliği\",\n",
+        "\n",
         "    \"Deniz enerjisi sistemleri\",\n",
         "    \"Gemi inşa süreçleri\",\n",
         "    \"Deniz navigasyonu\",\n",
@@ -565,27 +549,10 @@
         "print(\"Veri seti oluşturuldu.\")\n"
       ],
       "metadata": {
-        "id": "bF4loLrv7Nw7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        },
-        "outputId": "c1d57790-c743-45b5-e012-3fc8c21b1673"
+        "id": "bF4loLrv7Nw7"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-12d7ac9bdad7>\u001b[0m in \u001b[0;36m<cell line: 346>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    362\u001b[0m             \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mremove_spaces_between_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    363\u001b[0m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'instruction'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0minstruction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'input'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'output'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 364\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# API hız sınırlarını aşmamak için bekleme süresi ekleyin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    365\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    366\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Veri seti oluşturuldu.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -810,7 +777,7 @@
       "metadata": {
         "id": "THMvsvW5il5-"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +792,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
