--- a/Fine_tuning.ipynb
+++ b/Fine_tuning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMG0lCMbw4pleSNUBsn0WE",
+      "authorship_tag": "ABX9TyPbTFEo+BQgwePE6Kv4zxmq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,37 +32,10 @@
         "!pip install openai"
       ],
       "metadata": {
-        "id": "sS1jLlO24N21",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f1967c12-59df-47f8-f9bb-d7c9587b9860"
+        "id": "sS1jLlO24N21"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.51.2)\n",
-            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
-            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.27.2)\n",
-            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.6.1)\n",
-            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
-            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.5)\n",
-            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
-            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
-            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.6)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
-            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -194,7 +167,7 @@
         "    \"Güvenlik sistemleri\",\n",
         "    \"Şasi ve süspansiyon tasarımı\",\n",
         "    \"Emisyon kontrolü\",\n",
-        "      \"Yakıt hücreleri\",\n",
+        "    \"Yakıt hücreleri\",\n",
         "    \"Araç aerodinamiği\",\n",
         "    \"Mekatronik\",\n",
         "    \"Sensör ve aktüatörler\",\n",
@@ -216,32 +189,7 @@
         "    \"Denizaltı teknolojileri\",\n",
         "    \"Okyanus mühendisliği\",\n",
         "    \"Deniz kirliliği kontrolü\",\n",
-        "    \"Liman ve kıyı mühendisliği\","
-      ],
-      "metadata": {
-        "id": "a1E2mvoTLA_Z"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import csv\n",
-        "from openai import OpenAI\n",
-        "import time\n",
-        "import os\n",
-        "import random\n",
-        "import re\n",
-        "\n",
-        "# OpenAI API anahtarınızı güvenli bir şekilde kullanmak için ortam değişkenlerini kullanın\n",
-        "client = OpenAI(\n",
-        "    # This is the default and can be omitted\n",
-        "    api_key='sk-proj-',\n",
-        ")\n",
-        "\n",
-        "konular = [\n",
-        "\n",
+        "    \"Liman ve kıyı mühendisliği\",\n",
         "    \"Deniz enerjisi sistemleri\",\n",
         "    \"Gemi inşa süreçleri\",\n",
         "    \"Deniz navigasyonu\",\n",
@@ -269,7 +217,31 @@
         "    \"Mekanik özellikler ve testler\",\n",
         "    \"Metal şekillendirme\",\n",
         "    \"Malzeme yorgunluğu\",\n",
-        "    \"Kaynak teknolojileri\",\n",
+        "    \"Kaynak teknolojileri\","
+      ],
+      "metadata": {
+        "id": "a1E2mvoTLA_Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import csv\n",
+        "from openai import OpenAI\n",
+        "import time\n",
+        "import os\n",
+        "import random\n",
+        "import re\n",
+        "\n",
+        "# OpenAI API anahtarınızı güvenli bir şekilde kullanmak için ortam değişkenlerini kullanın\n",
+        "client = OpenAI(\n",
+        "    # This is the default and can be omitted\n",
+        "    api_key='sk-proj-',\n",
+        ")\n",
+        "\n",
+        "konular = [\n",
         "    \"Kompozit malzemeler\",\n",
         "    \"Deprem mühendisliği\",\n",
         "    \"Köprü mühendisliği\",\n",
